    * refactored the statistics and log pages.
    * refactored the throttle module configuration.
    * added a 'add child page' link to book pages.
- contact module:
    * added a simple contact module that allows users to contact each other using e-mail.
- multi-site configuration:
    * made it possible to run multiple sites from a single code base.
- performance:
    * improved performance of the forum topics block.
    * improved performance of the tracker module.
    * improved performance of the node pages.

Drupal 4.5.1, 2004-12-01
------------------------
- fixed bugs: no critical bugs were identified.

Drupal 4.5.0, 2004-10-18
------------------------
- navigation:
    * made it possible to add, delete, rename and move menu items.
    * introduced tabs and subtabs for local tasks.
    * reorganized the navigation menus.
- user management:
    * added support for multiple roles per user.
    * made it possible to add custom profile fields.
    * made it possible to browse user profiles by field.
- node system:
    * added support for node-level permissions.
- comment module:
    * made it possible to leave contact information without having to register.
- upload module:
    * added support for uploading documents (includes images).
- forum module:
    * added support for sticky forum topics.
    * made it possible to track forum topics.
- syndication:
    * added support for RSS ping-notifications of http://technorati.com/.
    * refactored the categorization of syndicated news items.
    * added an URL alias for 'rss.xml'.
    * improved date parsing.
- database backend:
    * added support for multiple database connections.
    * the PostgreSQL backend does no longer require PEAR.
- theme system:
    * changed all GIFs to PNGs.
    * reorganised the handling of themes, template engines, templates and styles.
    * unified and extended the available theme settings.
    * added theme screenshots.
- blocks:
    * added 'recent comments' block.